# Solar_z

./: .dockerignore  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
api/: Dockerfile  main.py  requirements.txt
api/static/: index.html
api/static/assets/: index-34cKNDUr.js  index-7WOov7wp.css  index-B942-mvm.js  index-BWRW-60x.css  index-C-RoS1X5.js  index-C-fOabSt.css  index-C90AfTEQ.js  index-CB1Y7GR0.js  index-CWR4Jk93.js  index-Cafv5nNc.js  index-CnG9U7rw.js  index-Cs85o4ts.js  index-CyMMdFi4.css  index-D2xcGeL4.js  index-DO6h4b9W.css  index-DQM8iQIZ.js  index-DkyV9ZkJ.js  index-GFcoTAg6.js  index-NGTWUMiV.js  index-OUMRWzth.js  index-OohclsY5.js  index-XoXMfqED.js  index-Z4LJz68Q.css  index-lJIQinYh.js  index-rC7uRW3-.css  web-D6_uQE8C.js  web-DvnD-o7R.js
collector/: Dockerfile  main.py  requirements.txt
init/: 01-timescaledb.sql  02-monthly-deltas.sql  03-billing-cycles.sql  04-billing-reports.sql  05-gap-tables.sql  06-gap-alerts.sql  06-push-tokens.sql  07-users.sql  cleanup-stale-data.sql  diagnose-totals.sql  supabase-schema.sql
scripts/: backfill_history.py  migrate_data.py  migrate_supabase.py
solar-monitor/: README.md  capacitor.config.ts  index.html  package-lock.json  package.json  vite.config.ts
solar-monitor/android/: capacitor.settings.gradle
solar-monitor/android/app/: build.gradle  capacitor.build.gradle  google-services.json
solar-monitor/src/: App.tsx  index.css
solar-monitor/src/components/: AlertsPanel.tsx  ChartsSection.tsx  FinancialOverview.tsx  Header.tsx  LoginPage.tsx  (+4 more)
src/solar_z/: __init__.py
(+13 files in other folders)
