[project]
name = "solar-z"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "liyoraju", email = "liyoraju7@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.34.2",
]

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"
